fixed api calls and dates
data (via API) and dates are loading correctly now. Refresh button works.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="header-arrow"></div>
   <div class="window">
     <header class="toolbar toolbar-header">
-      <h1 class="title"> 24 new notifications
+      <h1 class="title"> Reddit Tray App
         <span class="js-update-time"></span>
       </h1>
     </header>
@@ -22,51 +22,6 @@
       <div class="pane">
 
         <ul class="list-group">
-
-          <li class="list-group-item">
-            <div class="media-body">
-              <span>AUTHOR replied to your post in SUBREDDIT</span>
-              <p>Hi! Great to hear from you. First let me say it's so cool you're planning to organize presentations! We love
-                the community that's growing around the project, and things like that are a big part :) We don't offer any
-                discounts to anyone. All of our offers are at the same price. If you'd like I can set you up to proceed as
-                a qualified investor, but honestly, I think that would be even more hassle than participating in the ICO.
-                Unless you'd like to invest more than the 10% limit on the first day (€250,000 or 356.50 ETH at today's price)
-                I think your best bet would be to invest in the ICO. What do you think?</p>
-              <span><a href="#">Post Reply</a>&nbsp;• 7h ago</span>
-            </div>
-          </li>
-
-          <li class="list-group-item">
-              <div class="media-body">
-                <span>AUTHOR replied to your post in SUBREDDIT</span>
-                <p>Hi! Great to hear from you. First let me say it's so cool you're planning to organize presentations! We love
-                  the community that's growing around the project, and things like that are a big part :) We don't offer any
-                  discounts to anyone. All of our offers are at the same price. If you'd like I can set you up to proceed as
-                  a qualified investor, but honestly, I think that would be even more hassle than participating in the ICO.
-                  Unless you'd like to invest more than the 10% limit on the first day (€250,000 or 356.50 ETH at today's price)
-                  I think your best bet would be to invest in the ICO. What do you think?</p>
-                <span><a href="#">Post Reply</a>&nbsp;• 7h ago</span>
-              </div>
-            </li>
-
-
-          <!-- 
-          <li class="list-group-item">
-            <img class="img-circle media-object pull-left" src="redditpost-img.jpg" width="32" height="32">
-            <div class="media-body">
-              <strong>Good news: Maciej Baj just completed another major task that has good impact on LISK network stability. Code
-                changes are huge. Thanks Maciej</strong>
-              <p>7h ago by <a href="">u/DonBonetti</a></p>
-              <p>in <a href="">r/IconNetwork</a></p>
-              <p>
-                <span class="icon icon-up-open" title="">&nbsp;124</span>
-                &nbsp;|&nbsp;
-                <span class="icon icon-comment" title="Comments">&nbsp;<a href="">124 Comments</a></span>
-              </p>
-            </div>
-          </li>
-
-        -->
 
         </ul>
 
@@ -77,15 +32,15 @@
 
     <footer class="toolbar toolbar-footer">
 
-      <div class="footer-link">
+      <div class="footer-content">
         Updated Today, 04:30 PM
       </div>
 
       <div class="toolbar-actions pull-right">
         <div class="btn-group">
 
-          <button class="btn btn-default js-quit-action">
-            <span class="icon icon-pencil js-quit-action" title="Quit"></span>
+          <button class="btn btn-default js-refresh-action">
+            <span class="icon icon-pencil js-refresh-action" title="Refresh"></span>
           </button>
 
         </div>
