--- a/index.html
+++ b/index.html
@@ -25,31 +25,29 @@
         <div id="login-overlay">
           userAgent
           <br>
-          <input id="useragent" type="text" name="useragent">
+          <input id="useragent" type="text" name="useragent" value="reddit-trayapp">
 
           <br> clientId:
           <br>
-          <input id="clientid" type="text" name="clientid">
+          <input id="clientid" type="text" name="clientid" value="wUrk2naGcdbpzQ">
 
           <br> clientSecret:
           <br>
-          <input id="clientsecret" type="text" name="clientsecret">
+          <input id="clientsecret" type="text" name="clientsecret" value="l3hdiJCK5d18PXeTWAdZguKDnsU">
 
           <br> username:
           <br>
-          <input id="username" type="text" name="username">
+          <input id="username" type="text" name="username" value="RedditTrayApp">
 
           <br> password:
           <br>
-          <input id="password" type="text" name="password">
-          <br>
-          <br>
-          <span id="info"></span>
-          <br>
+          <input id="password" type="password" name="password" value="greatPassword123">
           <br>
           <input id="submitButton" type="submit" value="Save">
           <br>
-          <p>Check test_login_details.rtf for easy testing or reddit_trayapp_docs.pdf if you want to use it with your own account.</p>
+          <span id="info"></span>
+          <br>
+          <p>Hallo, habe zum schnellen Testen, die Felder bereits vorausgefüllt. <br><br> Check test_login_details.rtf for easy testing or reddit_trayapp_docs.pdf if you want to use it with your own account.</p>
 
         </div>
 
